<resources>
    <string name="app_name">Real Estate Manager</string>

    // General
    <string name="surface">Surface</string>
    <string name="surface_data">%.2f sq m</string>
    <string name="num_rooms">Total number of rooms</string>
    <string name="num_bathrooms">Bathrooms</string>
    <string name="num_bedrooms">Bedrooms</string>
    <string name="apply_button">Apply</string>
    <string name="cancel">Cancel</string>

    //Toolbar
    <string name="add_property">Add a property</string>
    <string name="edit_property">Edit this property</string>
    <string name="search">Search</string>

    //List


    // Detail Fragment
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="contact">Agent</string>
    <string name="contact_info">This sale is followed by %s since %s</string>
    <string name="contact_info_sold">Sold by %s the %s</string>
    <string name="proximity_school">School</string>
    <string name="proximity_stores">Stores</string>
    <string name="proximity_transports">Transports</string>
    <string name="proximity_park">Park</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="strenghts">Strenghts</string>
    <string name="map">Map</string>
    <string name="characteristics">Characteristics</string>


    // Add Property Activity
    <string name="title_activity_add_property">AddProperty</string>
    <string name="form_description">Property description</string>
    <string name="form_adress">Address</string>
    <string name="form_price">Sale price</string>
    <string name="form_submit">Submit</string>
    <string name="form_type">Type of property</string>
    <string name="add_property_conf">The property has been added successfully</string>
    <string name="date_for_datePicker">%1$02d/%2$02d/%3$d</string>
    <string name="adress_required">You must enter an address</string>
    <string name="price_required">You must enter a price</string>
    <string name="image_required">You must pick at least one image</string>
    <string name="date_start_sale_required">You must pick a date</string>
    <string name="agent_required">You must select the agent in charge</string>
    <string name="proximity">Proximity</string>
    <string name="photos">Photos</string>
    <string name="already_sold">Already sold?</string>
    <string name="date_of_the_sale">Date of the sale</string>
    <string name="other_datas">Who is in charge?</string>
    <string name="title_which_room">Which room is it?</string>

    //Search
    <string name="number_match">%d properties match your criteria</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="edit_this_add">Edit this add</string>
    <string name="see_the_list">See the list</string>
    <string name="reset_all_filters">Reset all filters</string>
    <string name="search_num_bedrooms">Num. bedrooms</string>
    <string name="search_num_bathrooms">Num. bathrooms</string>
    <string name="search_num_rooms">Num. rooms</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required for this screen, which shows the different assets in Sale.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this screen.</string>




</resources>
