<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_toolbar"
    >

    <item
        android:id="@id/addFragment"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_property"
        app:showAsAction="always" />

    <item
        android:id="@id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        />

    <item
        android:id="@id/mapsFragment"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/toolbar_sync"
        android:icon="@drawable/ic_baseline_sync_alt_24"
        android:title="Synchronise"
        app:showAsAction="ifRoom"
        />

</menu>