<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.add_property.AddPropertyActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_toolbar"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="6dp">


            <TextView
                android:id="@+id/tv_add_property_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="Ajouter une nouvelle annonce"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/form_type_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_type" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_description"
                style="@style/field_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_description"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description_input"
                    style="@style/field_add_reu_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:minLines="3" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_surface"
                style="@style/field_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surface"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_surface_input"
                    style="@style/field_add_reu_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_num_rooms"
                style="@style/field_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num_rooms"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_num_rooms_input"
                    style="@style/field_add_reu_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_num_bedrooms"
                style="@style/field_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num_bedrooms"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_num_bedrooms_input"
                    style="@style/field_add_reu_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_num_bathrooms"
                style="@style/field_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num_bathrooms"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_num_bathrooms_input"
                    style="@style/field_add_reu_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_adress"
                style="@style/field_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_adress"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_adress_input"
                    style="@style/field_add_reu_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_price"
                style="@style/field_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_price"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_price_input"
                    style="@style/field_add_reu_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <ImageView
                android:id="@+id/btnTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
               android:src="@drawable/ic_baseline_photo_camera_24" />

            <ImageView
                android:id="@+id/btnTakePhotoGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_baseline_image_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_erreur_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#F00020"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPrivatePhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp" />




            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_submit" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>