<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="fragment_search"
    tools:context=".ui.add_property.AddPropertyFragment">

    <TextView
        android:id="@+id/title_search_criteria"
        style="@style/titre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="Your search criteria"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_reset"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_refresh_24"
        app:layout_constraintLeft_toRightOf="@id/title_search_criteria"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="15dp"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_price"
        style="@style/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorSecondaryDark"
        android:text="Price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search_criteria" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_surface"
        style="@style/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surface"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search_criteria" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_rooms"
        style="@style/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_num_rooms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search_criteria" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_bedrooms"
        style="@style/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_num_bedrooms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search_criteria" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_bathrooms"
        style="@style/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_num_bathrooms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search_criteria" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_proximity"
        style="@style/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search_criteria" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_date_start_sale"
        style="@style/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="In sale since"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search_criteria" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_date_end_sale"
        style="@style/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sold before"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search_criteria" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        app:constraint_referenced_ids="btn_price, btn_rooms, btn_bedrooms, btn_bathrooms, btn_surface, btn_proximity, btn_date_start_sale,btn_date_end_sale"
        app:flow_horizontalGap="5dp"
        app:flow_horizontalStyle="spread"
        app:flow_verticalGap="10dp"
        app:flow_verticalStyle="spread"
        app:flow_wrapMode="chain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search_criteria" />



    <TextView
        android:id="@+id/tv_num_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flowView"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="gone"
        tools:text="8 properties match your criteria"
        tools:visibility="visible"
        />


    <TextView
        android:id="@+id/tv_linkToListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/see_the_list"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_num_match"
        android:visibility="gone"
        tools:visibility="visible"
        />






</androidx.constraintlayout.widget.ConstraintLayout>